# rtk-tui

./: CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  db.rs  event.rs  export.rs  main.rs
src/buddy/: animation.rs  mod.rs  mood.rs  render.rs  species.rs
src/ui/: commands.rs  dashboard.rs  history.rs  layout.rs  mod.rs  projects.rs  table_utils.rs  theme.rs
